--- a/app/globals.css
+++ b/app/globals.css
@@ -21,17 +21,15 @@
   --color-light-white-100: rgba(59, 60, 152, 0.02);
 
   --color-grey: #747a88;
-
-  /* --bg-pattern: url("/pattern.jpg"); */
 }
 
 /* START: General styles */
 .max-width {
-  @apply max-w-[1440px] mx-auto;
+  @apply mx-auto max-w-[1440px];
 }
 
 .padding-x {
-  @apply sm:px-16 px-6;
+  @apply px-6 sm:px-16;
 }
 
 .padding-y {
@@ -43,70 +41,70 @@
 }
 
 .flex-between {
-  @apply flex justify-between items-center;
+  @apply flex items-center justify-between;
 }
 
 .custom-btn {
-  @apply flex flex-row relative justify-center items-center py-3 px-6 outline-none;
+  @apply relative flex cursor-pointer flex-row items-center justify-center px-6 py-3 outline-none;
 }
 /* END: General styles */
 
 /* START: Hero styles */
 .hero {
-  @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1440px] mx-auto;
+  @apply relative z-0 mx-auto flex max-w-[1440px] flex-col gap-5 xl:flex-row;
 }
 
 .hero__title {
-  @apply 2xl:text-[72px] sm:text-[64px] text-[50px] font-extrabold;
+  @apply text-[50px] font-extrabold sm:text-[64px] 2xl:text-[72px];
 }
 
 .hero__subtitle {
-  @apply text-[27px] text-black-100 font-light mt-5;
+  @apply text-black-100 mt-5 text-[27px] font-light;
 }
 
 .hero__image-container {
-  @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
+  @apply flex w-full items-end justify-end xl:h-screen xl:flex-[1.5];
 }
 
 .hero__image {
-  @apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
+  @apply relative z-0 h-[590px] w-[90%] xl:h-full xl:w-full;
 }
 
 .hero__image-overlay {
-  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-[url("/hero-bg.png")] bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
+  @apply absolute -right-1/4 -z-10 h-[590px] w-full overflow-hidden bg-[url("/hero-bg.png")] bg-repeat-round xl:-top-24 xl:-right-1/2 xl:h-screen;
 }
 /* END: Hero styles */
 
 /* START: Home styles */
 
 .home__text-container {
-  @apply flex flex-col items-start justify-start gap-y-2.5 text-black-100;
+  @apply text-black-100 flex flex-col items-start justify-start gap-y-2.5;
 }
 
 .home__filters {
-  @apply mt-12 w-full justify-between items-center flex-wrap gap-5;
+  @apply mt-12 w-full flex-wrap items-center justify-between gap-5;
 }
 
 .home__filter-container {
-  @apply flex justify-start flex-wrap items-center gap-2;
+  @apply mt-2 flex flex-wrap items-center justify-start gap-2;
 }
 
 .home__cars-wrapper {
-  @apply grid 2xl:grid-cols-4 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 w-full gap-8 pt-14;
+  @apply grid w-full grid-cols-1 gap-8 pt-14 md:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4;
 }
 
 .home__error-container {
-  @apply mt-16 flex justify-center items-center flex-col gap-2;
+  @apply mt-16 flex flex-col items-center justify-center gap-2;
 }
 /* END: Home styles */
 
 /* START: Car Card styles */
 .car-card {
-  @apply flex flex-col p-6 justify-center items-start text-black-100 bg-primary-blue-100 hover:bg-white hover:shadow-md rounded-3xl;
+  @apply text-black-100 bg-primary-blue-100 flex flex-col items-start justify-center rounded-3xl p-6 hover:bg-white hover:shadow-md;
 }
 
 .car-card__content {
-  @apply w-full flex justify-between items-start gap-2;
+  @apply flex w-full items-start justify-between gap-2;
 }
 
 .car-card__content-title {
@@ -114,7 +112,7 @@
 }
 
 .car-card__price {
-  @apply flex mt-6 text-[32px] leading-[38px] font-extrabold;
+  @apply mt-6 flex text-[32px] leading-[38px] font-extrabold;
 }
 
 .car-card__price-dollar {
@@ -126,15 +124,15 @@
 }
 
 .car-card__image {
-  @apply relative w-full h-40 my-3 object-contain;
+  @apply relative my-3 h-40 w-full object-contain;
 }
 
 .car-card__icon-container {
-  @apply flex group-hover:invisible w-full justify-between text-grey;
+  @apply text-grey flex w-full justify-between group-hover:invisible;
 }
 
 .car-card__icon {
-  @apply flex flex-col justify-center items-center gap-2;
+  @apply flex flex-col items-center justify-center gap-2;
 }
 
 .car-card__icon-text {
@@ -142,92 +140,92 @@
 }
 
 .car-card__btn-container {
-  @apply hidden group-hover:flex absolute bottom-0 w-full z-10;
+  @apply absolute bottom-0 z-10 hidden w-full group-hover:flex;
 }
 /* END: Car Card styles */
 
 /* START: Car Details styles */
 .car-details__dialog-panel {
-  @apply relative w-full max-w-lg max-h-[90vh] overflow-y-auto transform rounded-2xl bg-white p-6 text-left shadow-xl transition-all flex flex-col gap-5;
+  @apply relative flex max-h-[90vh] w-full max-w-lg transform flex-col gap-5 overflow-y-auto rounded-2xl bg-white p-6 text-left shadow-xl transition-all;
 }
 
 .car-details__close-btn {
-  @apply absolute top-2 right-2 z-10 w-fit p-2 bg-primary-blue-100 rounded-full;
+  @apply bg-primary-blue-100 absolute top-2 right-2 z-10 w-fit rounded-full p-2;
 }
 
 .car-details__main-image {
-  @apply relative w-full h-40 bg-[url("/pattern.jpg")] bg-cover bg-center rounded-lg;
+  @apply relative h-40 w-full rounded-lg bg-[url("/pattern.png")] bg-cover bg-center;
 }
 /* END: Car Details styles */
 
 /* START: Custom Filter styles */
 .custom-filter__btn {
-  @apply relative w-full min-w-[127px] flex justify-between items-center cursor-default rounded-lg bg-white py-2 px-3 text-left shadow-md sm:text-sm border;
+  @apply relative flex w-full min-w-[127px] cursor-default items-center justify-between rounded-lg bg-white px-3 py-2 text-left shadow-md sm:text-sm;
 }
 
 .custom-filter__options {
-  @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black opacity-5 focus:outline-none;
+  @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base opacity-95 shadow-lg focus:outline-none;
 }
 /* END: Custom Filter styles */
 
 /* START: Footer styles */
 .footer {
-  @apply flex flex-col text-black-100  mt-5 border-t border-gray-100;
+  @apply text-black-100 mt-5 flex flex-col border-t border-gray-100;
 }
 
 .footer__links-container {
-  @apply flex max-md:flex-col flex-wrap justify-between gap-5 sm:px-16 px-6 py-10;
+  @apply flex flex-wrap justify-between gap-5 px-6 py-10 max-md:flex-col sm:px-16;
 }
 
 .footer__rights {
-  @apply flex flex-col justify-start items-start gap-6;
+  @apply flex flex-col items-start justify-start gap-6;
 }
 
 .footer__links {
-  @apply flex-1 w-full flex md:justify-end flex-wrap max-md:mt-10 gap-20;
+  @apply flex w-full flex-1 flex-wrap gap-20 max-md:mt-10 md:justify-end;
 }
 
 .footer__link {
-  @apply flex flex-col gap-6 text-base min-w-[170px];
+  @apply flex min-w-[170px] flex-col gap-6 text-base;
 }
 
 .footer__copyrights {
-  @apply flex justify-between items-center flex-wrap mt-10 border-t border-gray-100 sm:px-16 px-6 py-10;
+  @apply mt-10 flex flex-wrap items-center justify-between border-t border-gray-100 px-6 py-10 sm:px-16;
 }
 
 .footer__copyrights-link {
-  @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
+  @apply flex flex-1 justify-center gap-10 max-sm:mt-4 sm:justify-end;
 }
 /* END: Footer styles */
 
 /* START: searchbar styles */
 .searchbar {
-  @apply flex items-center justify-start max-sm:flex-col w-full relative max-sm:gap-4 max-w-3xl;
+  @apply relative flex w-full max-w-3xl items-center justify-start max-sm:flex-col max-sm:gap-4;
 }
 
 .searchbar__item {
-  @apply flex-1 max-sm:w-full flex justify-start items-center relative;
+  @apply relative flex flex-1 items-center justify-start max-sm:w-full;
 }
 
 .searchbar__input {
-  @apply w-full h-[48px] pl-12 p-4 bg-light-white rounded-r-full max-sm:rounded-full outline-none cursor-pointer text-sm;
+  @apply bg-light-white h-[48px] w-full cursor-pointer rounded-r-full p-4 pl-12 text-sm outline-none max-sm:rounded-full;
 }
 /* END: searchbar styles */
 
 /* START: search manufacturer styles */
 .search-manufacturer {
-  @apply flex-1 max-sm:w-full flex justify-start items-center;
+  @apply flex flex-1 items-center justify-start max-sm:w-full;
 }
 
 .search-manufacturer__input {
-  @apply w-full h-[48px] pl-12 p-4 rounded-l-full max-sm:rounded-full bg-light-white outline-none cursor-pointer text-sm;
+  @apply bg-light-white h-[48px] w-full cursor-pointer rounded-l-full p-4 pl-12 text-sm outline-none max-sm:rounded-full;
 }
 
 .search-manufacturer__options {
-  @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black opacity-5 focus:outline-none sm:text-sm;
+  @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base opacity-5 shadow-lg ring-1 ring-black focus:outline-none sm:text-sm;
 }
 
 .search-manufacturer__option {
-  @apply cursor-default select-none py-2 pl-10 pr-4;
+  @apply cursor-default py-2 pr-4 pl-10 select-none;
 }
 /* END: search manufacturer styles */
